createMovieFromTmdbData always built a brand new Movie. Renaming to syncMovieData and taking the target Movie as a parameter lets the same TMDB-field-mapping logic be reused for refreshing an already-persisted Movie in the next commit, without a second near-duplicate method.